# Legal-RAG

./: .gitattributes  .gitignore  .nojekyll  Dockerfile  LICENSE  License.txt  README-zh.html  README-zh.md  README.md  _quarto.yml  app.py  constraints.txt  docker-compose.yml  index.html  index.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  setup.py  sitemap.xml
.github/: FUNDING.yml
data/: download_data.py  download_index.py  download_ucc.py
data/graph/: law_graph.html
data/raw/ucc/: ucc_1.txt  ucc_2.txt  ucc_2A.txt  ucc_3.txt  ucc_4.txt  ucc_4A.txt  ucc_6.txt  ucc_7.txt  ucc_8.txt  ucc_9.txt
docs/: architecture.mmd  demo.html  demo.qmd
legalrag/: config.py  models.py  schemas.py
legalrag/agents/: __init__.py  legal_agent.py
legalrag/api/: server.py
legalrag/index/: registry.py
legalrag/ingest/: __init__.py  ingestor.py  orchestrator.py  service.py  task_queue.py
legalrag/llm/: client.py  context.py  gateway.py
legalrag/pdf/: parser.py
legalrag/pipeline/: rag_pipeline.py
legalrag/prompts/: legal_rag_prompt.txt  prompt_en.json  prompt_zh.json
legalrag/retrieval/: bm25_retriever.py  by_lang_retriever.py  case_retriever.py  colbert_retriever.py  corpus_loader.py  dense_retriever.py  graph_retriever.py  graph_store.py  hybrid_retriever.py  hyde.py  incremental_indexer.py  rerankers.py  vector_store.py
legalrag/retrieval/builders/: __init__.py  bm25_builder.py  colbert_builder.py  faiss_builder.py  graph_builder.py  incremental_bm25_builder.py  incremental_dense_builder.py
legalrag/routing/: legal_issue_extractor.py  router.py
legalrag/services/: __init__.py  index_api.py  retrieval_api.py
legalrag/utils/: lang.py  logger.py
notebooks/: 01_Launch_the_UI.html  01_Launch_the_UI.ipynb  01_LegalRAG_Demo.ipynb  01_kaggle_build_index_and_eval.ipynb  02_Law_Graph_Visualization.ipynb  02_LegalRAG_Pipeline.html  02_LegalRAG_Pipeline.ipynb  02_colab_qwen_rag_demo.ipynb  03_Retrieval_Performance_Evaluation.ipynb  03_retrieval_visualization.ipynb  04_Law_Graph_Visualization.html  04_Law_Graph_Visualization.ipynb  04_retrieval_benchmark_legal.ipynb  05_rag_answer_eval.ipynb
scripts/: __init__.py  build_case_index.py  build_graph.py  build_index.py  evaluate_retrieval.py  generate_synthetic_data.py  index_admin.py  preprocess_law.py  quiet.py  setup.py
tests/: test_retrieval.py  test_router.py
ui/: gradio_app.py  index.html  quarto_code_tools.html  quarto_styles.css
