[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "legal-rag"
version = "0.1.0"
description = "Graph-aware RAG system for Contract Law (Legal-RAG)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Fan Luo", email = "luofan813@gmail.com" }
]

dependencies = [

  # Embeddings / Transformers stack
  "sentence-transformers==5.1.1",
  "transformers==4.52.3",
  "torch>=2.8.0",

  # Web / API
  "fastapi",
  "uvicorn[standard]",
  "jedi>=0.16",

  # Config / Models
  "pydantic>=2.0.0",
  "pyyaml",

  # Logging
  "loguru",

  # Numeric / Data
  "numpy",
  "pandas==2.2.2",

  # Retrieval
  "faiss-cpu",
  "rank-bm25",
  "jieba",

  # LLM clients
  "openai>=1.0.0",
  "httpx",

  # ColBERT  
  "pylate==1.3.4",

  # Utilities
  "tqdm",
  "filelock",
  "scikit-learn>=1.4",
  "python-multipart",

  # PDF ingestion 
  "pypdf",
  "pdf2image",
  "pytesseract",
  "Pillow",
  "pdfplumber",

  # Notebook viz
  "matplotlib>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/Fan-Luo/Legal-RAG"
Repository = "https://github.com/Fan-Luo/Legal-RAG"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=24.0.0",
  "isort>=5.13.0",
  "mypy>=1.8.0"
]

notebooks = [
  "jupyter>=1.0.0",
  "ipykernel>=6.29.0",
  "notebook>=7.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["legalrag"]

[tool.hatch.build.targets.sdist]
include = [
  "legalrag",
  "scripts",
  "ui",
  "notebooks",
  "data",
  "README.md",
  "LICENSE",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false